# distributed-heavy-hitters

./: .gitignore  README.md  requirements.txt
data_preparation/: README.md  caida_analyzer.py
evaluator/: CMakeLists.txt  README.md  makefile  summary.txt
evaluator/apps/: hh_bench.cpp  hh_run.cpp
evaluator/cmake/: FetchBlake3.cmake
evaluator/include/hh/bench/: metrics.hpp
evaluator/include/hh/coord/: coordinator.hpp
evaluator/include/hh/core/: arena_map.hpp  hash.hpp  id128.hpp  normalize.hpp
evaluator/include/hh/exact/: exact_head.hpp
evaluator/include/hh/hybrid/: hybrid.hpp
evaluator/include/hh/io/: reader.hpp
evaluator/include/hh/oracle/: oracle_all.hpp
evaluator/include/hh/sizing/: sizing.hpp
evaluator/include/hh/sketches/: chk.hpp  heavylocker.hpp  isketch.hpp  lossy_strategy.hpp  ss.hpp
evaluator/src/bench/: metrics.cpp
evaluator/src/coord/: coordinator.cpp
evaluator/src/core/: arena_map.cpp  hash.cpp  normalize.cpp
evaluator/src/exact/: exact_head.cpp
evaluator/src/hybrid/: hybrid.cpp
evaluator/src/io/: reader.cpp
evaluator/src/oracle/: oracle_all.cpp
evaluator/src/sizing/: sizing.cpp
evaluator/src/sketches/: chk.cpp  heavylocker.cpp  ss.cpp
evaluator/tests/: hh_tests.cpp  test_basic.cpp
experiments/: run_experiments.py
experiments/calibration/: plot_ambiguity_grid.py  plot_hybrid_ablation.py  plot_rm_alpha_grid.py  plot_rm_alpha_topology.py  plot_temporal_controller_groups.sh  plot_temporal_grid.py  run_ambiguity_grid.sh  run_hybrid_ablation.sh  run_margin_service_calibration.sh  run_rm_alpha_grid.sh  run_temporal_controller_ablation.sh  run_temporal_grid.sh  summarize_ambiguity_grid.py  summarize_hybrid_ablation.py  summarize_rm_alpha.py  summarize_temporal_grid.py
generator/: README.md  main.py
generator/config/generation/: baseline.json  calibration_synthetic_n100.json  calibration_synthetic_n200.json  calibration_synthetic_n400.json  default.json  hh_hidden_exact.json  hh_hidden_optimal.json  round_robin.json  temporal_guard_ablation_n200.json
generator/config/partitioning/: hh_hidden_exact.json  hh_hidden_optimal.json  milp_certificate_adversary.json  milp_certificate_adversary_n100.json  milp_certificate_adversary_n400.json  persistent_ambiguity_adversary_n100.json  persistent_ambiguity_adversary_n200.json  persistent_ambiguity_adversary_n400.json  persistent_locality.json  round_robin.json  synthetic_mixture.json  synthetic_mixture_skewed.json  temporal_guard_burst_schedule_n200.json  temporal_guard_oscillation_schedule_n200.json  temporal_guard_ramp_schedule_n200.json  temporal_guard_step_schedule_n200.json
generator/config/runs/: baseline.json  calibration_synthetic_milp_certificate_adversary.json  calibration_synthetic_milp_certificate_adversary_n100.json  calibration_synthetic_milp_certificate_adversary_n400.json  calibration_synthetic_persistent_ambiguity_adversary_n100.json  calibration_synthetic_persistent_ambiguity_adversary_n200.json  calibration_synthetic_persistent_ambiguity_adversary_n400.json  calibration_synthetic_round_robin_n200.json  default.json  hh_hidden_exact.json  hh_hidden_optimal.json  round_robin.json  temporal_guard_burst_schedule_n200.json  temporal_guard_oscillation_schedule_n200.json  temporal_guard_ramp_schedule_n200.json  temporal_guard_step_schedule_n200.json
generator/config/scenarios/: calibration_mixed_n100.json  calibration_mixed_n200.json  calibration_mixed_n400.json  coverage_stress.json  crowded_threshold.json  default.json  short_5.json  temporal_guard_burst_n200.json  temporal_guard_oscillation_n200.json  temporal_guard_ramp_n200.json  temporal_guard_step_n200.json
generator/data/: data_utils.py  distributions.py  generate_data.py  partitioning.py
generator/tools/: hh_distribution.py
generator/visualisation/: data_visualiser.py
paper/: main.tex  sample.bib
